Docker, update Readme, delete book from list and update bookDetailPage
