# book_service/api-doc.yaml
@@ -173,7 +173,7 @@ paths:
         "500":
           description: Internal server error
 
-    /api/books/{bookId}/status:
+  /api/books/{bookId}/status:
     get:
       summary: Obtener estado y progreso de un libro para el usuario
       tags: [Books]
@@ -202,5 +202,35 @@ paths:
                     example: 45
         "401":
           description: Unauthorized
+        "500":
+          description: Internal server error
+/api/books/reading/{bookId}:
+    delete:
+      summary: Eliminar un libro de la lista de lectura del usuario
+      tags: [Books]
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: bookId
+          required: true
+          schema:
+            type: string
+          description: ID del libro a eliminar
+      responses:
+        "200":
+          description: Libro eliminado correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Book deleted
+        "401":
+          description: Unauthorized
+        "404":
+          description: Libro no encontrado en la lista
         "500":
           description: Internal server error
